fixing spacing why us on desktop

--- a/src/style.css
+++ b/src/style.css
@@ -59,7 +59,7 @@ h2, h2 span {
     font-weight: 700;
 }
 h3 {
-    font-size: 21px;
+    font-size: 25px;
     font-weight: 600;
     background-color: var(--hero);
     line-height: 45px;
@@ -81,6 +81,9 @@ h2::after, h3::after, .underline {
     margin-top: -6px;
     position: relative;
     z-index: 0 !important;
+}
+h3::after {
+    margin-top: 0px;
 }
 h2.animating::after, h3.animating::after, .underline {
     width: 120%;
@@ -235,6 +238,9 @@ button img {
     h3 {
         font-size: 31px;
         line-height: 55px;
+    }
+    h3::after {
+        margin-top: -6px;
     }
     h4 {
         font-size: 18px;
@@ -734,6 +740,8 @@ nav.contact .phone-icon-container {
 section.about img {
     object-fit: cover;
     max-width: 100%;
+    position: relative;
+    z-index: 2;
 }
 
 
@@ -1020,6 +1028,7 @@ section.services {
     .why-us-grid {
         margin-left: var(--big-vertical-margins);
         row-gap: 0;
+        padding-bottom: var(--horizontal-margins);
     }
     .subsection-intro p {
         flex-basis: calc(100% - 290px - var(--small-vertical-gap) * 2);
